--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sozh_max",
+  "name": "sozh_max",
   "version": "1.0.0",
   "description": "Sozh_max",
   "main": "",
@@ -13,6 +13,9 @@
   "author": "Kazachenka",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0"
   },
   "homepage": "https://github.com/sffirm/rsschool-codejam#readme"
